--- a/ZenCloudKit/Info.plist
+++ b/ZenCloudKit/Info.plist
@@ -19,7 +19,7 @@
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2017 Academ Media. All rights reserved.</string>
+	<string>Copyright © 2017 Hexfire (trancing@gmail.com). All rights reserved.</string>
 	<key>NSPrincipalClass</key>
 	<string></string>
 </dict>
